<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context="app.movie.tutorial.com.activity.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/back"
        android:text ="@string/welcome_back_to_the_maze"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button1"
        android:width="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_new_game"
        android:onClick="FindGame" />
    <Button
        android:id="@+id/button2"
        android:width="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:onClick="Profile" />
    <Button
        android:id="@+id/button3"
        android:width="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_history"
        android:onClick="GameHistory" />
    <Button
        android:id="@+id/button4"
        android:width="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:onClick="Logout"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</LinearLayout>
