<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:backgroundTint="@color/colorGreyLight"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="app.movie.tutorial.com.activity.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_maze_game"
        android:textSize="28sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/user_tag"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/user"
        android:textColor="#FF0000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:width="110dp"
        app:layout_constraintTop_toBottomOf="@+id/user_tag" />

    <TextView
        android:id="@+id/password_tag"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FF0000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:width="1100dp"
        app:layout_constraintTop_toBottomOf="@+id/password_tag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLogin"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:width="110dp"
            android:onClick="ExecuteLogin"
            android:text="@string/search_name" />

        <Button
            android:id="@+id/buttonRegister"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="0dp"
            android:width="110dp"
            android:onClick="Register"
            android:text="Register" />


    </LinearLayout>

</LinearLayout>
