<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="app.movie.tutorial.com.activity.RegisterActivity"
    android:orientation="vertical"    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_maze_game"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/user_tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/user"
        android:textColor="#FF0000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:width="110dp"
        app:layout_constraintTop_toBottomOf="@+id/user_tag" />

    <TextView
        android:id="@+id/email_tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="#FF0000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:width="110dp"
        app:layout_constraintTop_toBottomOf="@+id/user_tag" />

    <TextView
        android:id="@+id/password_tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FF0000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:width="110dp"
        app:layout_constraintTop_toBottomOf="@+id/password_tag" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:width="110dp"
        android:onClick="ExecuteRegister"
        android:text="Register" />

</LinearLayout>
